--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I'm a student trying to break into more fulfilling careers</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Colorado Springs</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Playing guitar, painting, or just playing video games</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>A renowned voice actor</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Outside of denver</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>More freedom to work from home, and much less of a physical toll</p>
     </section>
 
     <footer id="footer">
